@@ -1,5 +1,6 @@
 2003-02-13  Stephen M Moraco <stephmo@users.sourceforge.net>
 
+  * Applied Patch 651692: Add setjmp/longjmp (ANSI C support)
   * Applied Patch 673995: Patch brickos 0.2.6.09 for *BSD
 
 2003-01-11  Ed Manlove <emanlove@users.sourceforge.net>
@@ -315,4 +316,4 @@
 
   * creating this file after 0.2.5 release
 --
-$Id: ChangeLog,v 1.20 2003/02/14 05:30:37 stephmo Exp $
+$Id: ChangeLog,v 1.21 2003/02/14 05:40:50 stephmo Exp $
